-------------
(Changes that can break existing programs are marked with a "*")

Standard library:
* Add optional argument ?limit to Arg.align.

- PR#4099: Bug in Makefile.nt: won't stop on error (George Necula)
- PR#6181: Improve MSVC build (Chen Gang)
- PR#6466: Non-exhaustive matching warning message for open types is confusing
- PR#6529: fix quadratic-time algorithm in Consistbl.extract.
- PR#6533: broken semantics of %(%) when substitued by a box
  (Benoît Vaugon, report by Boris Yakobowski)
- PR#6534: legacy support for %.10s
  (Benoît Vaugon, Gabriel Scherer, report by Nick Chapman)
- PR#6536: better documentation of flag # in format strings
- PR#6544: Bytes and CamlinternalFormat missing from threads stdlib.cma
  (Christopher Zimmermann)
- PR#6546: -dsource omits parens for `List ((`String "A")::[]) in patterns
  (Gabriel Scherer, report by Peter Zotov)
- PR#6547: __MODULE__ aborts the compiler if the module name cannot be inferred
- PR#6549: Debug section is sometimes not readable when using -pack
  (Hugo Heuzard, review by Gabriel Scherer)
- PR#6554: fix race condition when retrieving backtraces (Jérémie Dimino,
  Mark Shinwell).
- PR#6564: infinite loop in Mtype.remove_aliases
- PR#6563: Inclusion of packs failing to run module initializers
- PR#6565: compilation fails with Env.Error(_)
- PR#6566: -short-paths and signature inclusion errors
- PR#6572: Fatal error with recursive modules
- PR#6578: Recursive module containing alias causes Segmentation fault
- PR#6581: Some bugs in generative functors
- PR#6553: Missing command line options for ocamldoc

OCaml 4.02.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
- Attributes and extension nodes
  (Alain Frisch)
- Generative functors (PR#5905)
  (Jacques Garrigue)
- Module aliases
  (Jacques Garrigue)
* Alternative syntax for string literals {id|...|id} (can break comments)
  (Alain Frisch)